--- a/src/main/webapp/src/my-app.html
+++ b/src/main/webapp/src/my-app.html
@@ -140,7 +140,7 @@
         properties: {page: {type: String, reflectToAttribute: !0, observer: '_pageChanged'}, user: Object, token: String},
         observers: ['_routePageChanged(routeData.page)'],
         ready: function () {
-            this.token = this._load(document.origin.concat('/token')), this.user = null
+            this._load(document.origin.concat('/token')), this.user = null
         },
         _routePageChanged: function (a) {
             this.page = a || 'view1', this.$.drawer.persistent || this.$.drawer.close()
@@ -159,7 +159,7 @@
             var xhr = new XMLHttpRequest();
             xhr.onreadystatechange = function() {
                 if (xhr.readyState === 4) {
-                    return xhr.response;
+                    this.token = xhr.response;
                 }
             }
             xhr.open('GET', url, true);
