--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -95,6 +95,9 @@
     <link rel="prefetch" href="src/my-icons.html">
 </head>
 <body>
+    <script>
+        var access_token;
+    </script>
     <my-app></my-app>
 </body>
 </html>
